@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-07-07T08:15:02Z",
+  "timestamp" : "2022-07-07T16:19:16Z",
   "count_outdated" : 377,
   "uniques_outdated" : 204,
   "count" : 405,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-06-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-07-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
